# attackathon

./: README.md
data/ln_10/: simln.json
data/ln_4/: ln_4.json
scripts/: start_attacker.sh  start_network.sh  start_warnet.sh  stop_warnet.sh
setup/: Dockerfile  armada.yaml  create_network.sh  fund.sh  install_cli.sh  run.sh
templates/: README.md  copy_and_run_golang.sh
templates/golang/: bitcoin.go  go.mod  go.sum  graph.go  jamming.go  lnd.go  main.go  utils.go
templates/rustlang/: Cargo.toml
